kubernetes/overlays/infrastructure/infra/applications/metal3/network-policies/allow-remote-node.yaml
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: remote-node-allow
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      control-plane: controller-manager
  ingress:
  - fromEntities:
    - remote-node
